--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,67 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@600&family=Concert+One&family=Dosis:wght@500&family=DynaPuff&family=PT+Sans+Caption:wght@700&display=swap');
+
+
 *{
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 body{
-    margin: 0p;
-    padding: 0px;
-    font-family: 'Open Sans', sans-serif;
-}
-.wrapper{
-    width: 1100px;
-    margin: auto;
-    position: sticky;
-
-}
-.logo a {
-    font-size: 50px;
-    align-items: center;
-    font-weight: 800px;
-    float: left;
-    font-family:'Courier New', Courier, monospace;
-    color: #ca4153;
-}
-.menu{
-    float: right;
-
+    font-family:  'Dosis', sans-serif;
+    overflow-x: hidden;
 }
 
 nav {
-    width: 100%;
-    margin: auto;
     display: flex;
-    line-height: 80px;
-    position: static;
-    position: -webkit-sticky;
-    top: 0;
-    background-color:#b32d2a; 
+    background-color: #caa883;
+    justify-content: space-around;
+    /* padding: 20px 0; */
+    color: aliceblue;
+    align-items: center;
+    margin: auto;
+    height:  80px;
+    list-style: none;
 }
-nav ul {
-    list-style-type: none;
-    margin: 10px;
-    cursor: pointer;
+
+nav ul{
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    list-style: none;
+    margin-left: 1000px;
 }
-nav ul li {
-    float: left;
-}
-nav ul li a {
-    color:#ebe0ce ;
-    font-weight: unset;
-    text-align: center;
-    padding: 15px 10px 15px 10px;
+
+nav ul li a{
+    color: aliceblue;
     text-decoration: none;
+    font-family: 'Dosis', sans-serif;
+    font-size: 0.8em;
+    list-style: none;
+    
+    
 }
-nav ul li a :hover {
-    text-decoration: underline;
+
+nav ul li a :hover{
+    color: black;
 }
 
 
 .home {
   position: absolute;
   top: 50px;
-
 
     
 }
@@ -96,19 +84,6 @@ nav ul li a :hover {
 }
 
 
-footer {
-    position: absolute;
-    height: 70px;
-    line-height: 50px;
-    background:#f5b0b3;
-    color: #ca4153;
-    position: absolute;
-    bottom: -20px;
-    width: 100%;
-    text-align: center;
-    font-family: optional;
-    margin-bottom: 20px;
-}
 .bingkai{
     border: 3px solid;
     border-radius: 20px;
@@ -136,7 +111,6 @@ footer {
 .darkmode{
     --primary-color :black;
     --secondary-color : #f5b0b3;
-
 
 }
 
@@ -176,51 +150,60 @@ tr td {
     grid-template-columns: repeat(3, 1fr);
     margin: 50px;
     align-items: center;
-    grid-gap: 30px;
+    grid-gap: 10px;
+    margin-left: 150px;
   
 }
 .grid > article{
-    box-shadow: 10px 5px 5px 0 #ebe0ce;
+    box-shadow: 10px 5px 5px 0 #caa883;
     border-radius: 30px;
     text-align: center;
-    background-color: #ebe0ce;
+    background-color: #caa883;
     width: 300px;
     transition: transorm;
 }
 .grid >article img {
-    border-top-left-radius:20px ;
-    border-top-right-radius: 20px;
+    border-top-left-radius:30px ;
+    border-top-right-radius: 30px;
     width: 100%;
+    object-fit: cover;
 }
 .paragraf{
     text-transform: uppercase;
     cursor: progress;
-    color: #33755a;
+    color: whitesmoke;
     font-family:'Bungee Spice','Dancing Script', 'Dangrek', 'Roboto';
     font-size: 15px;
 
 }
 .grid > article:hover{
-    transform:rotate(15deg);
-    transform: scale(0.5);
+    /* transform:rotate(15deg); */
+    /* transform: scale(0.5); zoom out */
+    transform: scale(1.1);
+    /* transform: translate(50px); geser */
 }
 .konten{
     margin-top: 500px;
 }
 .heading{
     align-items: center;
-    margin-left: 550px;
-    color:#ebe0ce;
+    margin-left: 400px;
+    color:#caa883;
     font-family:'Bungee Spice','Dancing Script', 'Dangrek', 'Roboto';
     font-size: 30px;
-    margin-top: 550px;
+    margin-top: 750px;
+    display: grid;
  
+}
+
+.heading h1{
+    margin-left: 150px;
 }
 
 .heading1{
     align-items: center;
     margin-left: 570px;
-    color:#ebe0ce;
+    color:#caa883;
     font-family:'Bungee Spice','Dancing Script', 'Dangrek', 'Roboto';
     font-size: 20px;
     margin-top: 150px;
@@ -238,7 +221,7 @@ tr td {
     margin-top: 20px;
     border-radius: 30px;
     text-align: center;
-    background-color: #ebe0ce;
+    background-color: #caa883;
     width: 300px;
     transition: transorm;
 }
@@ -249,8 +232,47 @@ tr td {
 }
 .paragraf{
     text-transform: uppercase;
-    color: #33755a;
+    color: #f5e4d2;
     font-family:'Bungee Spice','Dancing Script', 'Dangrek', 'Roboto';
     font-size: 15px;
 
+}
+
+@media (max-width : 1000px){
+    .grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width : 500px){
+    .grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media (max-width : 1000px){
+    .heading{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width : 500px){
+    .heading{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.footer {
+    float: left;
+    background-color:#b5936f;
+    color: white;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    margin-top: 20%;
+    /* padding-top: 30px; */
+}
+
+.footer p{
+    padding-top: 15px;
 }
